--- a/packages/ng-calculator/src/index.html
+++ b/packages/ng-calculator/src/index.html
@@ -15,6 +15,8 @@
       href="https://fonts.font.im/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <!-- ECharts CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/echarts@5.6.0/dist/echarts.min.js"></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
